# gensdf

./: train.py  train.sh
config/genpu/: specs.json
data/preprocessing/: CMakeLists.txt  preprocess_script.py  sdf_gen.cpp
data/splits/: pu_train_split.json
dataloader/: pu_ds.py
model/: __init__.py
model/archs/decoders/: deepsdf_arch.py
model/genpu/: model.py  model_pu.py
model/gensdf/: model.py
